<resources>
    <string name="app_name">MusicInformator</string>
    <string name="loading">불러오는 중...</string>
    <string name="main">메인</string>
    <string name="search">검색</string>
    <string name="library">라이브러리</string>
    <string name="setting">설정</string>
    <string name="album_image">Album Image</string>
    <string name="sample_song_name">Sexual</string>
    <string name="sample_song_artist">Neiked</string>
    <string name="music_action_button">Music Action Button</string>
    <string name="recently_played">최근 재생한 곡</string>
    <string name="song">노래</string>
    <string name="search_hint">제목, 앨범명 또는 아티스트</string>
    <string name="recently_search">최근 검색</string>
    <string name="remove">remove</string>
    <string name="songs_empty">저장된 노래가 없어요</string>
    <string name="search_result">검색 결과</string>
    <string name="sort_type">정렬 방식</string>
    <string name="per_page_result_count">페이지당 결과 개수</string>
    <string name="search_category">검색 카테고리</string>
</resources>