<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@drawable/bg_gradient_main"
    tools:ignore="MissingConstraints">

    <TextView
        android:id="@+id/tv_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textColor="@color/colorWhite"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/colorWhite"
        android:id="@+id/et_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_twice_and_half"
        android:layout_marginEnd="@dimen/margin_twice_and_half"
        android:layout_marginTop="@dimen/margin_default"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_outline_search_24"
        android:drawablePadding="@dimen/margin_half"
        android:drawableTint="@color/colorLightGray"
        android:hint="@string/search_hint"
        android:inputType="text"
        android:textColorHint="@color/colorLightGray"
        app:layout_constraintTop_toBottomOf="@+id/tv_search" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/margin_twice_and_half"
        android:background="@color/colorLightGray"
        app:layout_constraintTop_toBottomOf="@+id/et_search" />

    <TextView
        android:id="@+id/tv_searched_songs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/recently_search"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_recently_searched"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:layout_marginTop="@dimen/margin_default"
        android:paddingStart="@dimen/margin_default"
        android:paddingEnd="@dimen/margin_default"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/layout_searched_song"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_searched_songs" />

</androidx.constraintlayout.widget.ConstraintLayout>